--- a/css/home.css
+++ b/css/home.css
@@ -61,6 +61,7 @@ nav .fa {
     width: 200px;
     top: -100vh;
     right: 0;
+    left: 0;
     text-align: left;
     z-index: 2;
     padding: 20px;
